--- a/app/src/main/res/layout/activity_game_main.xml
+++ b/app/src/main/res/layout/activity_game_main.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/welcome">
+    android:background="@null">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -56,8 +56,8 @@
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_marginBottom="5dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
@@ -67,6 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
+                android:onClick="GameOnClick"
                 android:src="@drawable/game_rock_selector"
                 android:id="@+id/RockImageBtn"
                 android:layout_alignParentTop="true"
@@ -77,6 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
+                android:onClick="GameOnClick"
                 android:src="@drawable/game_paper_selector"
                 android:id="@+id/PaperImageBtn"
                 android:layout_alignParentTop="true"
@@ -87,6 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
+                android:onClick="GameOnClick"
                 android:src="@drawable/game_scissors_selector"
                 android:id="@+id/ScissorsImageBtn"
                 android:layout_alignParentTop="true"
@@ -98,6 +101,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:id="@+id/gameLayout"
+            android:onClick="GameOnClick"
             android:layout_marginTop="2dp"
             android:layout_marginBottom="2dp"
             android:layout_centerHorizontal="true"
@@ -106,29 +110,54 @@
 
 
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
                 android:id="@+id/ComputerImage"
                 android:src="@drawable/game_rock_computer"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true" />
 
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
                 android:id="@+id/PlayerImage"
                 android:src="@drawable/game_rock_pressed"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true" />
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
                 android:id="@+id/gameAnswer_Image"
                 android:src="@drawable/game_start"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true" />
         </RelativeLayout>
+
+        <SlidingDrawer
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="horizontal"
+            android:content="@+id/content"
+            android:handle="@+id/handle"
+            android:id="@+id/slidingDrawer">
+
+            <LinearLayout
+                android:id="@+id/content"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:clickable="true"
+                android:onClick="onClick"
+                android:background="@drawable/game_help"
+                android:orientation="vertical"/>
+
+            <Button
+                android:id="@+id/handle"
+                android:layout_width="0dp"
+                android:layout_height="0dp"/>
+
+        </SlidingDrawer>
+
 
     </RelativeLayout>
 
