--- a/app/src/main/res/layout/activity_shake.xml
+++ b/app/src/main/res/layout/activity_shake.xml
@@ -15,6 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:id="@+id/shake_back_button"
+            android:onClick="shakeMain"
             android:background="@drawable/shake_back"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
@@ -37,6 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/shake_imageButton"
+            android:onClick="shakeMain"
             android:background="@drawable/settings"
             android:layout_marginRight="10dp"
             android:layout_centerVertical="true"
@@ -50,6 +52,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:id="@+id/shakeMain"
+        android:onClick="shakeMain"
         android:layout_gravity="center_horizontal"
         android:background="@color/black_blue">
         
