--- a/app/src/main/res/layout/game_dialog_settings.xml
+++ b/app/src/main/res/layout/game_dialog_settings.xml
@@ -4,15 +4,12 @@
     android:layout_height="fill_parent"
     android:background="@null"
     android:clickable="true"
-    android:orientation="vertical"
-    android:padding="20.0dp" >
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:orientation="vertical" >
 
         <TextView
@@ -67,7 +64,7 @@
                     <Switch
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/setting_switch1"
+                        android:id="@+id/gameEffectSwitch"
                         android:background="@color/blue"
                         android:textOff=" 关 "
                         android:textOn=" 开 "
@@ -119,7 +116,7 @@
                     <Switch
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/setting_switch2"
+                        android:id="@+id/gameBgSwitch"
                         android:background="@color/blue"
                         android:textOff=" 关 "
                         android:textOn=" 开 "
@@ -130,6 +127,25 @@
                 </RelativeLayout>
 
             </LinearLayout>
+
+            <view
+                android:layout_width="fill_parent"
+                android:layout_height="2px"
+                class="android.support.v7.widget.LinearLayoutCompat"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/shape_line" />
+
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:text="@string/confirm"
+                android:id="@+id/confirm"
+                android:textSize="22dp"
+                android:background="@drawable/dialog_confirm_btn"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
         </LinearLayout>
 
