--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,12 +14,13 @@
     <color name="white">#ffffffff</color>
     <color name="silvery">#d4e7e6e5</color>
     <color name="grey">#ffbfbfbf</color>
-    <color name="white_grey">#ffc0c3c4</color>
+    <color name="white_grey">#ffd7dadb</color>
     <color name="black_grey">#ff000000</color>
     <color name="background_normal">#fffffbf0</color>
     <color name="font_value">#ff2f2f2f</color>
     <color name="blue">#ff2e7ac4</color>
     <color name="white_blue">#ff2fb1ff</color>
+    <color name="green_white">#ff47e317</color>
     <color name="green">#ff2b6e24</color>
     <color name="black_blue">#ff1e2e44</color>
     <color name="list_view_silvery">#ff22222b</color>
