--- a/app/src/main/res/layout/activity_game_set_grade.xml
+++ b/app/src/main/res/layout/activity_game_set_grade.xml
@@ -28,6 +28,7 @@
         android:layout_alignParentRight="true" />
 
     <RadioGroup
+        android:id="@+id/GameRadioGroup"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
