--- a/app/src/main/res/layout/activity_main_discover.xml
+++ b/app/src/main/res/layout/activity_main_discover.xml
@@ -26,8 +26,6 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_toRightOf="@+id/friends_state_icon"
-            android:layout_toLeftOf="@+id/go_state_icon"
-            android:layout_toStartOf="@+id/go_state_icon"
             android:gravity="center|left"
             android:text="好友动态"
             android:textColor="@color/grey"
@@ -70,8 +68,6 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_toRightOf="@+id/shark_it_off_icon"
-            android:layout_toLeftOf="@+id/go_state_icon2"
-            android:layout_toStartOf="@+id/go_state_icon2"
             android:gravity="center|left"
             android:text="摇一摇"
             android:textColor="@color/grey"
@@ -114,8 +110,6 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_toRightOf="@+id/nearby_icon"
-            android:layout_toLeftOf="@+id/go_state_icon3"
-            android:layout_toStartOf="@+id/go_state_icon3"
             android:gravity="center|left"
             android:text="附近的人"
             android:textColor="@color/grey"
@@ -150,8 +144,6 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_toRightOf="@+id/show_nearby_icon"
-            android:layout_toLeftOf="@+id/go_map"
-            android:layout_toStartOf="@+id/go_map"
             android:gravity="center|left"
             android:text="在地图上显示陌生人"
             android:textColor="@color/grey"
@@ -171,11 +163,44 @@
             android:background="@drawable/shape_line"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="加 友 设 置"
-        android:id="@+id/button3"
-        android:layout_gravity="center_horizontal" />
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="30dp"
+        android:gravity="center">
+        <view
+            android:layout_width="fill_parent"
+            android:layout_height="2px"
+            class="android.support.v7.widget.LinearLayoutCompat"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/shape_line"/>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/add_friend_setting_icon"
+            android:layout_marginTop="5dp"
+            />
+        <com.android.decipherstranger.view.HandyTextView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_toRightOf="@+id/add_friend_setting_icon"
+            android:gravity="center|left"
+            android:text="加好友设置"
+            android:textColor="@color/grey"
+            android:textSize="18dip"/>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:id="@+id/go_state_icon4"
+            android:src="@drawable/go_to"
+            android:layout_marginTop="5dp"/>
+        <view
+            android:layout_width="fill_parent"
+            android:layout_height="2px"
+            class="android.support.v7.widget.LinearLayoutCompat"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/shape_line"
+            android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
 </LinearLayout>
