--- a/app/src/main/res/layout/activity_main_discover.xml
+++ b/app/src/main/res/layout/activity_main_discover.xml
@@ -167,7 +167,8 @@
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:layout_marginTop="30dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:id="@+id/add_friend_settings">
         <view
             android:layout_width="fill_parent"
             android:layout_height="2px"
