--- a/app/src/main/res/layout/activity_main_friend_list.xml
+++ b/app/src/main/res/layout/activity_main_friend_list.xml
@@ -5,7 +5,7 @@
     android:background="@color/black_blue">
     <com.android.decipherstranger.view.ClearEditText
         android:id="@+id/filter_edit"
-        android:layout_marginTop="5dip"
+        android:layout_marginTop="10dip"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/seabar_input"
@@ -15,15 +15,36 @@
         android:textSize="15.0dip" />
     <FrameLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
-
-        <ListView
-            android:id="@+id/country_lvcountry"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center"
-            android:divider="@null" />
-
+        android:layout_height="fill_parent"
+        android:layout_marginTop="10dip">
+       <LinearLayout
+           android:layout_width="fill_parent"
+           android:layout_height="wrap_content">
+           <ImageView
+               android:layout_width="50dip"
+               android:layout_height="50dip"
+               android:src="@drawable/friends_request_icon"/>
+           <RelativeLayout
+               android:layout_width="fill_parent"
+               android:layout_height="fill_parent">
+               <com.android.decipherstranger.view.HandyTextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_marginLeft="20dip"
+                   android:textSize="20dip"
+                   android:textColor="#336598"
+                   android:text="@string/friend_request"
+                   android:layout_alignTop="@+id/friends_request_count"
+                   android:layout_alignParentStart="true" />
+               <com.android.decipherstranger.view.BadgeView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:id="@+id/friends_request_count"
+                   android:layout_marginEnd="51dp"
+                   android:layout_centerVertical="true"
+                   android:layout_alignParentEnd="true" />
+           </RelativeLayout>
+       </LinearLayout>
         <TextView
             android:id="@+id/dialog"
             android:layout_width="80.0dip"
@@ -40,5 +61,12 @@
             android:layout_width="30.0dip"
             android:layout_height="fill_parent"
             android:layout_gravity="right|center" />
+
+        <ListView
+            android:id="@+id/country_lvcountry"
+            android:layout_width="fill_parent"
+            android:layout_height="409dp"
+            android:layout_gravity="center_horizontal|bottom"
+            android:divider="@null" />
     </FrameLayout>
 </LinearLayout>
