--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -18,7 +18,8 @@
             <RelativeLayout
                 android:layout_width="43dp"
                 android:layout_height="fill_parent"
-                android:gravity="center">
+                android:gravity="center"
+                android:id="@+id/unread_message_count">
             <ImageView
                 android:layout_width="43dp"
                 android:layout_height="30dp"
@@ -44,7 +45,8 @@
             <RelativeLayout
                 android:layout_width="43dp"
                 android:layout_height="fill_parent"
-                android:gravity="center">
+                android:gravity="center"
+                android:id="@+id/new_friends_count">
                 <ImageView
                     android:layout_width="43dp"
                     android:layout_height="30dp"
