--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -15,10 +15,11 @@
             android:gravity="center"
             android:id="@+id/chat"
             android:layout_weight="1">
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="43dp"
                 android:layout_height="fill_parent"
                 android:gravity="center"
+                android:orientation="vertical"
                 android:id="@+id/unread_message_count">
             <ImageView
                 android:layout_width="43dp"
@@ -31,10 +32,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/chat_text_view"
                 android:textColor="#008000"
-                android:text="@string/chat"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true" />
-            </RelativeLayout>
+                android:text="@string/chat" />
+            </LinearLayout>
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="3dp"
@@ -42,10 +41,11 @@
             android:layout_height="fill_parent"
             android:gravity="center"
             android:layout_weight="1">
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="43dp"
                 android:layout_height="fill_parent"
                 android:gravity="center"
+                android:orientation="vertical"
                 android:id="@+id/new_friends_count">
                 <ImageView
                     android:layout_width="43dp"
@@ -58,10 +58,8 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/friends_text_view"
                     android:textColor="#008000"
-                    android:text="@string/friend_list"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true" />
-            </RelativeLayout>
+                    android:text="@string/friend_list" />
+            </LinearLayout>
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="3dp"
@@ -69,10 +67,11 @@
             android:id="@+id/discover"
             android:gravity="center"
             android:layout_weight="1">
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="43dp"
                 android:layout_height="fill_parent"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
                 <ImageView
                     android:layout_width="43dp"
                     android:layout_height="30dp"
@@ -84,10 +83,8 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/discover_text_view"
                     android:textColor="#008000"
-                    android:text="@string/discover"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true" />
-            </RelativeLayout>
+                    android:text="@string/discover" />
+            </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
 
