# Decipher Stranger # Shake && Login # Created by penghaitao 4/29

--- a/app/src/main/res/layout/activity_shake.xml
+++ b/app/src/main/res/layout/activity_shake.xml
@@ -3,6 +3,12 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:id="@+id/top"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="50dp"
