--- a/app/src/main/res/layout/activity_shake_portrait.xml
+++ b/app/src/main/res/layout/activity_shake_portrait.xml
@@ -9,6 +9,8 @@
         android:layout_height="300dp"
         android:id="@+id/imageView2"
         android:background="@null"
+        android:onClick="ShakePopup"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+    
 </RelativeLayout>
