--- a/app/src/main/res/layout/activity_game_main.xml
+++ b/app/src/main/res/layout/activity_game_main.xml
@@ -129,7 +129,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:id="@+id/gameAnswer_Image"
-                android:src="@drawable/game_start"
+                android:src="@null"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true" />
         </RelativeLayout>
