# Decipher Stranger # Somethings changes again

--- a/app/src/main/res/layout/activity_main_friend_list.xml
+++ b/app/src/main/res/layout/activity_main_friend_list.xml
@@ -63,7 +63,7 @@
             android:layout_gravity="right|center" />
 
         <ListView
-            android:id="@+id/country_lvcountry"
+            android:id="@+id/contact_list"
             android:layout_width="fill_parent"
             android:layout_height="409dp"
             android:layout_gravity="center_horizontal|bottom"
