--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,9 @@
     <color name="translucent_grey">#b4a5a5a5</color>
     <color name="translucent_black">#b44b4b4b</color>
 
-    <color name="text_blue">#3399cc</color>
+    <color name="text_blue">#ff1eb4ff</color>
+    <color name="text_hint">#ff737373</color>
+    <color name="page">#ffdcdcdc</color>
 
     <color name="red">#ffff0000</color>
     <color name="orange">#ffff570a</color>
